fix: images jumping while dragging

--- a/src/components/Droppable.css
+++ b/src/components/Droppable.css
@@ -8,16 +8,6 @@
   border: 1px solid black;
 }
 
-.unranked-droppable {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  width: 100%;
-  list-style-type: none;
-  padding: 5px;
-  background-color: rgba(39, 39, 39, 0.831);
-  border: 1px solid black;
-}
-
 .droppable-container {
   display: flex;
   min-height: 92px;
@@ -46,14 +36,5 @@
 @media screen and (max-width: 600px) {
   .droppable {
     grid-template-columns: repeat(2, 1fr);
-  }
-  .unranked-droppable {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    width: 100%;
-    background-color: rgba(39, 39, 39, 0.831);
-    list-style-type: none;
-    border: 1px solid black;
   }
 }
